- Added forums and bugtracker to Help menu. (AMZ)
- Fixed Fonts Collector behavior with font shortcuts. (AMZ)
- Better error reporting when loading Automation scripts (jfs)
- Attempting to load a file which does not exist no longer unloads previous subtitles. (AMZ)
- Dragging timecode files into the Aegisub window will now work as expected (instead of attempting to load it as subtitles). (AMZ)


= 1.09 beta - 2006.01.16 ===========================

- Implemented Timing Post-Processor dialog to automatically add lead-in/lead-out, scene timing and adjascence adjustment for sharp-timed subs (AMZ)
- Aegisub is now translateable, with proper localization files. (AMZ) Available now are:
   o Brazilian Portuguese
   o French (thanks to TechNiko and Kurasu)
   o Russian (thanks to ]thrash_sensei[)
   o German (thanks to equinox)
- Fixed saving of hotkeys (AMZ)
- Fixed behavior of Insert key in Translation Assistant (AMZ)
- Ctrl+Enter now previews in translation assistant (AMZ)
- Fixed "make times continuous" bug (AMZ)
- Checks if there's enough free space when using disk cache and asks if disk cache should be used when there isn't enough ram available (Myrsloik)
- Always enforces the set memory limit for avisynth even if no video is opened (Myrsloik)
- Fixed crashes when not enough memory could be allocated for ram cache (Myrsloik)
- Properties dialog will no longer flag file as modified if nothing changed (AMZ)
- The config.dat file is now fully documented again, for the first time since beta 1.00... let's see how long it lasts. (TheFluff)
- Selected line is now properly enabled on audio display when audio is loaded (AMZ)
- Cosmetic improvements to toolbar (AMZ)
- Improved command line and drag-and-drop opening of files (extended to allow video and audio at the same time as well) (AMZ)
- Fixed audio glitches when using disk cache and scrolling the audio display while playing (Myrsloik)